--- a/src/features/reports/components/ReportTable/ReportTable.module.css
+++ b/src/features/reports/components/ReportTable/ReportTable.module.css
@@ -7,11 +7,11 @@ table {
 thead {
   box-shadow: inset 0px 1px 0px var(--faint-weak);
   background: #f0f0f0;
+  top: -88px;
+  position: sticky;
 }
 
 th {
-  top: 44px;
-  position: sticky;
   background: #f0f0f0;
   padding: 6px 8px;
   text-align: left;
